# aether-terminal

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
landing/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  ollama.rs  pty.rs
src/components/agents/: AgentDashboard.tsx  ApprovalDialog.tsx
src/components/ai/: AiChatPanel.tsx  Markdown.tsx
src/components/explorer/: FileExplorer.tsx  FileNode.tsx  FileViewer.tsx
src/components/layout/: MainLayout.tsx  StatusBar.tsx  TitleBar.tsx
src/components/settings/: ApiKeyManager.tsx  SettingsPanel.tsx
src/components/terminal/: Terminal.tsx  TerminalTabs.tsx
src/hooks/: usePty.ts
src/lib/: utils.ts
src/lib/agents/: graph.ts  tools.ts  types.ts
src/lib/codegraph/: index.ts
src/lib/llm/: providers.ts  types.ts
src/lib/syntax/: highlighter.tsx
src/lib/utils/: diff.ts
src/stores/: agentStore.ts  aiStore.ts  fileStore.ts  terminalStore.ts  workspaceStore.ts
